@@ -1,3 +1,14 @@
+Sun Jun  7 04:16:39 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
+	  extract class: StackFrameInfo.
+
+	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
+	  extract method: generateFunctionBody.
+
+	net/loveruby/cflat/entity/DefinedFunction.java: new method
+	  #lvarScope.
+
 Sun Jun  7 03:17:06 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* sysdep/x86/CodeGenerator.java (compileFunctionBody): fix offset
